fix ejs messages, fix date not showing properly, a, add css

--- a/public/formStyle.css
+++ b/public/formStyle.css
@@ -22,7 +22,7 @@ body {
     width: 100dvw;
     height: 100dvh;
     color: #edf2f4;
-    background-color: #001d3d;
+    background-color: #288bcecb;
 }
 
 .nav {
